@@ -9,9 +9,6 @@ import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 public class SelectableConverterTest {
-  private SelectableConverterTest() {
-  }
-
   @DataProvider(name = "variables")
   public static Object[][] variables() {
     return new Object[][] {
@@ -20,9 +17,9 @@ public class SelectableConverterTest {
   }
 
   @Test(dataProvider = "variables")
-  public static void testApply(int[] input, int[] output) {
+  public void testApply(int[] input, int[] output) {
     Function<Stream<int[]>, Stream<int[]>> converter = new SelectableConverter<>(OperatorVariables.class, 1000);
     Assert.assertEquals(converter.apply(Stream.of(input)).peek(ints -> Assert.assertEquals(ints, output,
-        String.format("Actual %s, Expected %s", Arrays.toString(ints), Arrays.toString(output)))).count(), 1);
+        "Actual %s, Expected %s".formatted(Arrays.toString(ints), Arrays.toString(output)))).count(), 1);
   }
 }
