@@ -1,16 +1,16 @@
 package com.ak.rsm;
 
 import java.util.Objects;
-import java.util.stream.IntStream;
 
 import javax.annotation.Nonnegative;
 import javax.annotation.Nonnull;
 import javax.measure.Unit;
 import javax.measure.quantity.Length;
 
+import com.ak.util.Metrics;
 import tec.uom.se.quantity.Quantities;
+import tec.uom.se.unit.MetricPrefix;
 
-import static tec.uom.se.unit.MetricPrefix.MILLI;
 import static tec.uom.se.unit.Units.METRE;
 
 final class TetrapolarSystem {
@@ -20,30 +20,27 @@ final class TetrapolarSystem {
   private final double lCurrentCarryingSI;
 
   TetrapolarSystem(@Nonnegative double sPU, @Nonnegative double lCC, @Nonnull Unit<Length> unit) {
-    if (sPU >= lCC) {
-      throw new IllegalArgumentException(String.format("%.6f > %.6f", sPU, lCC));
-    }
-    sPotentialUnitSI = toDouble(sPU, unit);
-    lCurrentCarryingSI = toDouble(lCC, unit);
+    sPotentialUnitSI = toDouble(Math.min(sPU, lCC), unit);
+    lCurrentCarryingSI = toDouble(Math.max(sPU, lCC), unit);
+  }
+
+  double radius(double sign) {
+    return Math.abs(lCurrentCarryingSI + Math.signum(sign) * sPotentialUnitSI) / 2.0;
+  }
+
+  @Nonnegative
+  double getL() {
+    return lCurrentCarryingSI;
   }
 
   /**
    * Gets <b>apparent</b> specific resistance which is correspond to 1-layer model.
    *
-   * @param resistance in Ohms.
+   * @param rOhms in Ohms.
    * @return <b>apparent</b> specific resistance in Ohm-m.
    */
-  @Nonnegative
-  double getApparent(@Nonnegative double resistance) {
-    return 0.5 * Math.PI * resistance / (1.0 / radiusMinus() - 1.0 / radiusPlus());
-  }
-
-  double radiusMinus() {
-    return lCurrentCarryingSI - sPotentialUnitSI;
-  }
-
-  double radiusPlus() {
-    return lCurrentCarryingSI + sPotentialUnitSI;
+  double getApparent(@Nonnegative double rOhms) {
+    return rOhms * Math.PI / (Math.abs(1.0 / radius(-1.0)) - Math.abs(1.0 / radius(1.0)));
   }
 
   @Override
@@ -56,35 +53,30 @@ final class TetrapolarSystem {
     }
 
     TetrapolarSystem that = (TetrapolarSystem) o;
-    return Objects.equals(sPotentialUnitSI, that.sPotentialUnitSI) && Objects.equals(lCurrentCarryingSI, that.lCurrentCarryingSI);
+    return Objects.equals(Math.min(sPotentialUnitSI, lCurrentCarryingSI), Math.min(that.sPotentialUnitSI, that.lCurrentCarryingSI)) &&
+        Objects.equals(Math.max(sPotentialUnitSI, lCurrentCarryingSI), Math.max(that.sPotentialUnitSI, that.lCurrentCarryingSI));
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(sPotentialUnitSI, lCurrentCarryingSI);
+    return Objects.hash(Math.min(sPotentialUnitSI, lCurrentCarryingSI), Math.max(sPotentialUnitSI, lCurrentCarryingSI));
   }
 
   @Override
   public String toString() {
-    return String.format("%s x %s",
-        Quantities.getQuantity(sPotentialUnitSI, METRE).to(MILLI(METRE)),
-        Quantities.getQuantity(lCurrentCarryingSI, METRE).to(MILLI(METRE)));
+    return "%2.0f x %2.0f %s".formatted(Metrics.toMilli(sPotentialUnitSI), Metrics.toMilli(lCurrentCarryingSI), MetricPrefix.MILLI(METRE));
   }
 
-  TetrapolarSystem[] newWithError(@Nonnegative double dlCC, @Nonnull Unit<Length> unit) {
-    if (Double.compare(dlCC, 0.0) == 0) {
-      throw new IllegalArgumentException("dL == 0");
-    }
-
-    return IntStream.of(1, -1).mapToObj(dLSign -> {
-          var error = toDouble(dlCC, unit) * dLSign;
-          return new TetrapolarSystem(sPotentialUnitSI - error, lCurrentCarryingSI + error, METRE);
-        }
-    ).toArray(TetrapolarSystem[]::new);
+  @Nonnull
+  TetrapolarSystem newWithError(@Nonnegative double absErrorSI, int signS, int signL) {
+    return new TetrapolarSystem(
+        sPotentialUnitSI + Math.signum(signS) * absErrorSI,
+        lCurrentCarryingSI + Math.signum(signL) * absErrorSI, METRE);
   }
 
+  @Nonnegative
   private static double toDouble(@Nonnegative double sPU, @Nonnull Unit<Length> unit) {
-    return Quantities.getQuantity(sPU, unit).to(METRE).getValue().doubleValue();
+    return Math.abs(Quantities.getQuantity(sPU, unit).to(METRE).getValue().doubleValue());
   }
 }
 
