@@ -3,6 +3,7 @@ package com.ak.util;
 import java.io.BufferedWriter;
 import java.io.Closeable;
 import java.io.IOException;
+import java.io.Writer;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
@@ -23,13 +24,13 @@ public final class LineFileCollector implements Collector<Object, BufferedWriter
   public enum Direction {
     HORIZONTAL {
       @Override
-      public void acceptWriter(BufferedWriter writer) throws IOException {
+      public void acceptWriter(@Nonnull BufferedWriter writer) throws IOException {
         writer.write(Strings.TAB);
       }
     },
     VERTICAL {
       @Override
-      public void acceptWriter(BufferedWriter writer) throws IOException {
+      public void acceptWriter(@Nonnull BufferedWriter writer) throws IOException {
         writer.newLine();
       }
     };
@@ -42,9 +43,16 @@ public final class LineFileCollector implements Collector<Object, BufferedWriter
   private boolean startFlag = true;
   private boolean errorFlag;
 
-  public LineFileCollector(@Nonnull Path out, @Nonnull Direction direction) throws IOException {
-    writer = Files.newBufferedWriter(out,
-        StandardOpenOption.WRITE, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+  public LineFileCollector(@Nonnull Path out, @Nonnull Direction direction) {
+    BufferedWriter bufferedWriter;
+    try {
+      bufferedWriter = Files.newBufferedWriter(out,
+          StandardOpenOption.WRITE, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+    }
+    catch (IOException ex) {
+      bufferedWriter = new BufferedWriter(Writer.nullWriter());
+    }
+    writer = bufferedWriter;
     this.direction = direction;
   }
 
@@ -70,7 +78,7 @@ public final class LineFileCollector implements Collector<Object, BufferedWriter
           bufferedWriter.write(object.toString());
         }
         catch (IOException e) {
-          Logger.getLogger(getClass().getName()).log(Level.WARNING, String.format("Exception when writing object: %s", object), e);
+          Logger.getLogger(getClass().getName()).log(Level.WARNING, "Exception when writing object: %s".formatted(object), e);
           errorFlag = true;
         }
       }
@@ -89,6 +97,7 @@ public final class LineFileCollector implements Collector<Object, BufferedWriter
     return bufferedWriter -> {
       if (!errorFlag) {
         try {
+          bufferedWriter.write(Strings.NEW_LINE);
           bufferedWriter.flush();
           bufferedWriter.close();
         }
